products & brands page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- fontawesome kit -->
     <script src="https://kit.fontawesome.com/0741ba60a7.js"></script>
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- slick css -->
     <link rel="stylesheet" href="./slick/slick.css">
     <link rel="stylesheet" href="./slick/slick-theme.css">
@@ -37,7 +37,7 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="search-box d-flex gap-3 align-items-center">
+                                        <div class="search-box d-flex gap-1 align-items-center">
                                             <i class="fa-solid fa-magnifying-glass"></i>
                                             <input type="search" placeholder="Search"
                                                 class="form-control-plaintext text-white form-control-sm ml-1 px-1 inh">
@@ -46,7 +46,7 @@
                                 </div>
                                 <div class="top-right row">
                                     <div class="col d-flex align-items-center">
-                                        <div class="login-reg d-flex align-content-center">
+                                        <div class="login-reg d-flex align-content-center gap-1">
                                             <i class="fa-solid fa-user pr-2"></i>
                                             <a href="#">
                                                 <span class="p-1">LOGIN</span>
@@ -58,9 +58,9 @@
                                         </div>
                                     </div>
                                     <div class="col d-flex align-items-center">
-                                        <div class="cart d-flex align-items-center">
+                                        <div class="cart d-flex align-items-center gap-2">
                                             <i class="fa-solid fa-cart-shopping"></i>
-                                            <span class="text-white pl-2" style="cursor: pointer;">0 ITEM BDT O</span>
+                                            <span class="text-white" style="cursor: pointer;">0 ITEM BDT O</span>
                                         </div>
                                     </div>
                                 </div>
@@ -70,18 +70,86 @@
                     <div class="row header-nav-links">
                         <div class="col container-fluid">
                             <ul class="d-flex justify-content-center">
-                                <li>
-                                    <a href="#">
+                                <li class="hover-able">
+                                    <a href="./products.html">
                                         <span>PRODUCTS</span> <i class="fa-solid fa-sort-down"></i>
                                     </a>
+                                    <div class="hover-products p-3">
+                                        <div class="row pl-2">
+                                            <div class="col-6">
+                                                <a href=""><h3>Disposable Vapes</h3></a>
+                                                <ul>
+                                                    <a href=""><h3>E-Chigarette Kits</h3></a>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                                <ul>
+                                                    <a href=""><h3>E-Chigarette Kits</h3></a>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                                <ul>
+                                                    <a href=""><h3>E-Chigarette Kits</h3></a>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                                <a href=""><h3>Heat Not Burn</h3></a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a href=""><h3>Newest Arival</h3></a>
+                                                <ul>
+                                                    <a href=""><h3>E-Chigarette Kits</h3></a>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                                <ul>
+                                                    <a href=""><h3>E-Chigarette Kits</h3></a>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                                <ul>
+                                                    <a href=""><h3>E-Chigarette Kits</h3></a>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                                <a href=""><h3>Heat Not Burn</h3></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
-                                <li>
-                                    <a href="#">
+                                <li class="hover-able2">
+                                    <a href="brands.html">
                                         <span>BRANDS</span> <i class="fa-solid fa-sort-down"></i>
                                     </a>
+                                    <div class="hover-brands p-2">
+                                        <div class="row">
+                                            <div class="col-6 text-center">
+                                                <ul>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-6 text-center">
+                                                <ul>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                    <li><a href="">vape pans</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="index.html">
                                         <img src="./assets/vs-new-logo.png" alt="" width="114" height="auto">
                                     </a>
                                 </li>
@@ -734,7 +802,7 @@
                             endorsement by them.</p>
                     </div>
                     <div class="col">
-                        <p style="color: #a3a3a3;font-size: 10px;font-family: gothambook;text-align: center;">©2020 Vape
+                        <p style="color: #a3a3a3;font-family: gothambook;text-align: center;">©2020 Vape
                             Stop. All Rights Reserved. Global Head Office: Prime Tower, Business Bay, Dubai, UAE.
                             Country Head Office: D Block, Road 140, Gulshan South Avenue, Gulshan-1, Dhaka, Bangladesh.
                         </p>
@@ -752,7 +820,7 @@
     </footer>
     <!-- footer ends  -->
     <!-- bootstrap js  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!--jquery & slick js -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
