--- a/products.html
+++ b/products.html
@@ -191,7 +191,7 @@
         <section class="products-all mt-5 mb-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-12">
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
@@ -252,10 +252,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-9 pt-4">
+                    <div class="col-lg-9 col-12 pt-4">
                         <div class="container-fluid">
                             <div class="row row-cols-4">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -269,7 +269,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -283,7 +283,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -297,65 +297,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <p class="card-text">Some quick example text to build on the card title .</p>
-                                            <h5 class="card-title">Price</h5>
-                                        </div>
-                                        <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
-                                            <button>BUY</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row row-cols-4 mt-4">
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <p class="card-text">Some quick example text to build on the card title .</p>
-                                            <h5 class="card-title">Price</h5>
-                                        </div>
-                                        <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
-                                            <button>BUY</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <p class="card-text">Some quick example text to build on the card title .</p>
-                                            <h5 class="card-title">Price</h5>
-                                        </div>
-                                        <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
-                                            <button>BUY</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <div class="card">
-                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <p class="card-text">Some quick example text to build on the card title .</p>
-                                            <h5 class="card-title">Price</h5>
-                                        </div>
-                                        <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
-                                            <button>BUY</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -371,7 +313,7 @@
                                 </div>
                             </div>
                             <div class="row row-cols-4 mt-4">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -385,7 +327,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -399,7 +341,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -413,7 +355,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -429,7 +371,7 @@
                                 </div>
                             </div>
                             <div class="row row-cols-4 mt-4">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -443,7 +385,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -457,7 +399,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -471,7 +413,65 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col-lg-3 col-6">
+                                    <div class="card">
+                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">Some quick example text to build on the card title .</p>
+                                            <h5 class="card-title">Price</h5>
+                                        </div>
+                                        <div class="view-buy-hover gap-2">
+                                            <button>VIEW</button>
+                                            <button>BUY</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row row-cols-4 mt-4">
+                                <div class="col-lg-3 col-6">
+                                    <div class="card">
+                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">Some quick example text to build on the card title .</p>
+                                            <h5 class="card-title">Price</h5>
+                                        </div>
+                                        <div class="view-buy-hover gap-2">
+                                            <button>VIEW</button>
+                                            <button>BUY</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-6">
+                                    <div class="card">
+                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">Some quick example text to build on the card title .</p>
+                                            <h5 class="card-title">Price</h5>
+                                        </div>
+                                        <div class="view-buy-hover gap-2">
+                                            <button>VIEW</button>
+                                            <button>BUY</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-6">
+                                    <div class="card">
+                                        <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">Some quick example text to build on the card title .</p>
+                                            <h5 class="card-title">Price</h5>
+                                        </div>
+                                        <div class="view-buy-hover gap-2">
+                                            <button>VIEW</button>
+                                            <button>BUY</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-6">
                                     <div class="card">
                                         <img src="./assets/products/strawberry_mango.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
