--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="./vape-guide.html">
                                         <span>VAPE GUIDE</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="./customar-service.html">
                                         <span>CUSTOMAR SERVICE</span>
                                     </a>
                                 </li>
