--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vape Guide</title>
+    <title>Register Here</title>
     <!-- fontawesome kit -->
     <script src="https://kit.fontawesome.com/0741ba60a7.js"></script>
     <!-- bootstrap css -->
@@ -171,97 +171,45 @@
     <!-- header ends -->
     <!-- main start here -->
     <main>
-        <div class="breadcrumb-links mt-2">
-            <div class="container">
-                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a style="color: black; text-decoration: none;" href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Vape Guide</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-        <div class="p-bnr">
-            <div class="pr-banner">
-                <img src="./assets/products/vape-guide.jpg" alt="" width="100%">
-            </div>
-        </div>
-        <section class="vape-guide-acordian mt-5 mb-5">
-            <div class="container">
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            Q). What is vaping?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                Q). Is there a difference between e-cigarettes, vaping/vape, e hookah, or e shisha?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingThree">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                Q). Are vapes or e cigarettes different from heat-not-burn?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                                Q). Are e-cigarettes/vaping safer than tobacco cigarettes?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingFive">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                                Q). Which vape product can I choose as a first?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingSix">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                                Q). How expensive will be vaping?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingSeven">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
-                                Q). What does the medical field say about vaping?
-                            </button>
-                        </h2>
-                        <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                        </div>
+        <div class="register-section">
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col col-lg-8 col-12">
+                        <form action="">
+                            <h5>CREATE AN ACCOUNT</h5>
+                            <div class="col col-lg-6 col-12">
+                                <input type="text" name="" id="" class="form-control my-4" placeholder="First Name*" required>
+                                <input type="text" name="" id="" class="form-control my-4" placeholder="Last Name*" required>
+                                <input type="email" name="" id="" class="form-control my-4" placeholder="Your Email*" required>
+                                <input type="password" name="" id="" class="form-control my-4" placeholder="Create a password*" required>
+                                <input type="password" name="" id="" class="form-control my-4" placeholder="Confirm password*" required>
+                            </div>
+                            <h6>PLEASE NOTE:</h6>
+                            <p>By creating an account with us, you are confirming that you are 18 years or over.</p>
+                            <p>Please <a href="">Click Here</a> for Full <a href="">Terms & Conditions</a>.</p>
+                            <div class="captcha"></div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="row justify-content-between mt-2">
+                                        <div class="col col-6"><button type="submit" class="btn btn-primary" style="width: 100%;height: 100%;">Submit</button></div>
+                                        <div class="col col-6"><button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#loginModal" style="width: 100%;">ALREADY HAVE AN ACCOUNT?</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row"><div class="col text-center my-3"><span>OR</span></div></div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="row justify-content-between ">
+                                        <div class="col col-6"><button type="button" class="btn with-g" style="width: 100%;"><a href=""><i class="fa-brands fa-google-plus-g"></i>Register</a></button></div>
+                                        <div class="col col-6"><button type="button" class="btn with-f" style="width: 100%;"><a href=""><i class="fa-brands fa-facebook-f"></i>Register</a></button></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
     <!-- main ends -->
     <!-- login modal -->
