single product page added

--- a/brands.html
+++ b/brands.html
@@ -262,7 +262,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -276,7 +276,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -290,7 +290,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -304,7 +304,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -320,7 +320,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -334,7 +334,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -348,7 +348,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
@@ -362,7 +362,7 @@
                                             <h5 class="card-title">Price</h5>
                                         </div>
                                         <div class="view-buy-hover gap-2">
-                                            <button>VIEW</button>
+                                            <a href="./single-product.html"><button>VIEW</button></a>
                                             <button>BUY</button>
                                         </div>
                                     </div>
