--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                                         <div class="time-left">Time left</div>
                                         <div class="vishdate">
                                         </div>
-                                        <div class="tm-cdt-flip flip-small flip-light flip-clock-wrapper row">
-                                            <span class="custom1Hours flip-clock-divider hours">
+                                        <div class="tm-cdt-flip flip-small flip-light flip-clock-wrapper row ">
+                                            <span class="custom1Hours flip-clock-divider hours ">
                                                 <span class="customHours flip-clock-label">Hours</span>
                                             </span>
                                             <ul class="flip ">
@@ -583,7 +583,9 @@
                             comes with best price guarantee, same day dispatch, warranty, and 100% original products.
                             You can also find regular e juice and nicotine or nic salt e liquid in Bangladesh bd on Vape
                             Stop, the leading vape shop online.</p>
-                        <h1><span class="online-cnt" style="font-size: 20px;">DISPOSABLE VAPES IN BANGLADESH ON VAPE
+
+                        <div class="collapse" id="block-id">
+                            <h1><span class="online-cnt" style="font-size: 20px;">DISPOSABLE VAPES IN BANGLADESH ON VAPE
                                 STOP</span></h1>
                         <p class="overlay-content" style="text-align: justify;">Apart from JUUL, Vape Stop Bangladesh
                             also offers a compelling range of disposable e cigs, where are trending across the world
@@ -687,8 +689,19 @@
                             <a href="https://vapestopglobal.com/bd/">Vape Stop</a> is your one stop shop for all vaping
                             needs with super-fast delivery and cash on delivery payment option. </p>
 
-                        <div id="myBtn">MORE</div>
-                        <div id="myBtn-less">LESS</div>
+                        </div>    
+                        <div class="row">
+                            <div class="col text-center">
+                                <a href="#block-id" class="btn btn-primary show-more-btn" data-bs-toggle="collapse" aria-expanded="false" aria-controls="block-id">
+                                    <span class="collapsed show-more-btn">
+                                    Show more
+                                    </span>
+                                    <span class="expanded show-more-btn">
+                                    Show Less
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
